--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
+askama = "0.12.1"
+axum = "0.7.7"
+gethostname = "0.5.0"
 log = "0.4.22"
 prost = "0.13.3"
 pyo3 = {version="0.22.3", features = ["extension-module"]}
