--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -31,6 +31,7 @@ jobs:
         conda create -n venv python=3.10 protobuf -y
         conda activate venv
         python -m pip install --upgrade pip
+        pip install expecttest==0.3.*
 
         # install recent version of Rust via rustup
         curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=default -y
