Introduce ManagedDeviceMesh to integrate DeviceMesh with TorchFT
Summary:
ManagedDeviceMesh allow users to manipulate DeviceMesh with TorchFT ManagedProcessGroup.

ghstack-source-id: c42ae2205624402ccfe99fb87c847f6ffb7a1703
Pull Request resolved: https://github.com/pytorch/torchft/pull/56

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ dev = [
     "pytest",
     "black",
     "pyre-check",
-    "parameterized"
+    "parameterized",
+    "expecttest",
+    "numpy"
 ]
 
 [tool.maturin]
